# metal_test

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.c  metal_hooks.c  tags
examples/: CMakeLists.txt  example_metal_hooks.c  simple_fixture_example.c  simple_fixtureless_example.c  types_example.c
examples/module_example/: CMakeLists.txt  fixture.h  tests_module.c
examples/module_example/application_include/: application.h
examples/module_example/application_source/: application.c
examples/module_example/mocks/: mock_module.c
examples/module_example/module_include/: module.h
examples/simple_examples/: CMakeLists.txt  simple_fixture_example.c  simple_fixtureless_example.c  simple_mem_eq_example.c  simple_string_example.c  simple_types_example.c
examples/single_main_example/: CMakeLists.txt  main.c  test_file_alpha.c  test_file_beta.c
include/: .metal_test.h.swo  assert_macros.h  fixture_management.h  metal_hooks.h  metal_test.h  metaltest.h
include/implementation/: assert_macros.h  fixture_management.h  simple_assert_macros.h  type_punning.h
source/: CMakeLists.txt  Makefile  metal_test.c  stdlib_metal_hooks.c
